[gd_scene load_steps=26 format=3 uid="uid://dacg0tcpohas3"]

[ext_resource type="Theme" uid="uid://c7aqcuf0u3rkj" path="res://resources/themes/main_theme.tres" id="1_jwffw"]
[ext_resource type="Script" path="res://scripts/jobs/RecipeScriptContainer.gd" id="2_7wbos"]
[ext_resource type="Texture2D" uid="uid://cdoeser7bqai8" path="res://assets/window_icon/metiers.png" id="2_73nq4"]
[ext_resource type="Texture2D" uid="uid://c5pnk06ayib0j" path="res://assets/window_icon/tailleur.png" id="3_tf7k7"]
[ext_resource type="Texture2D" uid="uid://10kiiskaock5" path="res://assets/window_icon/cordonnier.png" id="4_61n3x"]
[ext_resource type="Texture2D" uid="uid://vih7op5hhjk0" path="res://assets/window_icon/bijoutier.png" id="5_4gc3m"]
[ext_resource type="Texture2D" uid="uid://c5vryhi7myfkr" path="res://assets/window_icon/forgeron.png" id="6_y5wvt"]
[ext_resource type="Texture2D" uid="uid://c6y1nwfwwwhwa" path="res://assets/window_icon/sculpteur.png" id="7_apyme"]
[ext_resource type="Texture2D" uid="uid://c6cudfe180atn" path="res://assets/window_icon/faconneur.png" id="8_dcrck"]
[ext_resource type="Texture2D" uid="uid://b3aqa0jqlriwp" path="res://assets/window_icon/bricoleur.png" id="9_lrvox"]
[ext_resource type="Texture2D" uid="uid://fg67fytininp" path="res://assets/common/button/btn_green_small_normal.jpg" id="10_vq4xv"]
[ext_resource type="Texture2D" uid="uid://cck4ndl64sg2x" path="res://assets/common/button/btn_green_small_over.jpg" id="11_n3sqq"]
[ext_resource type="Texture2D" uid="uid://ioa8txwipu5x" path="res://assets/common/button/btn_green_small_pressed.jpg" id="12_52vr4"]
[ext_resource type="Texture2D" uid="uid://dm2b6x2nro3gh" path="res://assets/common/button/btn_green_small_disabled.png" id="13_na5qv"]
[ext_resource type="Texture2D" uid="uid://c4k6d26v1afdo" path="res://assets/btn_icon/btnIcon_filter.png" id="14_u6fwg"]
[ext_resource type="Script" path="res://scripts/CustomTabContainer.gd" id="15_eh2m5"]
[ext_resource type="Texture2D" uid="uid://2dcp1dm0fl1x" path="res://assets/btn_icon/btnIcon_gear.png" id="16_60i36"]
[ext_resource type="PackedScene" uid="uid://brot8qkranooc" path="res://scenes/jobs/job_panel.tscn" id="16_pogut"]
[ext_resource type="PackedScene" uid="uid://cdkopp0w34ycf" path="res://scenes/filters/recipe_filters.tscn" id="18_4riuv"]
[ext_resource type="Script" path="res://scripts/orderable_list/OrderableList.gd" id="20_bmbl0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lf5oy"]
texture = ExtResource("10_vq4xv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x5bcs"]
texture = ExtResource("11_n3sqq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2wctw"]
texture = ExtResource("12_52vr4")
modulate_color = Color(2, 1.2, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ypvh6"]
texture = ExtResource("13_na5qv")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j634f"]

[node name="RecipeScriptContainer" type="PanelContainer" node_paths=PackedStringArray("search_prompt", "filter_button", "scripting_button", "tab_container", "filter_container", "scripting_container", "recipe_filters")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource("1_jwffw")
script = ExtResource("2_7wbos")
search_prompt = NodePath("VBC/ActionsContainer/HeaderContainer/Search")
filter_button = NodePath("VBC/ActionsContainer/HeaderContainer/FilterButton")
scripting_button = NodePath("VBC/ActionsContainer/HeaderContainer/ScriptingButton")
tab_container = NodePath("VBC/TabContainer")
filter_container = NodePath("VBC/FilterContainer")
scripting_container = NodePath("VBC/ScriptingPanel")
recipe_filters = NodePath("VBC/FilterContainer/RecipeFilters")

[node name="VBC" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TabBarContainer" type="HBoxContainer" parent="VBC"]
layout_mode = 2

[node name="Space" type="Control" parent="VBC/TabBarContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="JobTabBar" type="TabBar" parent="VBC/TabBarContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
tab_count = 8
tab_alignment = 1
drag_to_rearrange_enabled = true
tab_0/title = ""
tab_0/icon = ExtResource("2_73nq4")
tab_1/title = ""
tab_1/icon = ExtResource("3_tf7k7")
tab_2/title = ""
tab_2/icon = ExtResource("4_61n3x")
tab_3/title = ""
tab_3/icon = ExtResource("5_4gc3m")
tab_4/title = ""
tab_4/icon = ExtResource("6_y5wvt")
tab_5/title = ""
tab_5/icon = ExtResource("7_apyme")
tab_6/title = ""
tab_6/icon = ExtResource("8_dcrck")
tab_7/title = ""
tab_7/icon = ExtResource("9_lrvox")

[node name="ActionsContainer" type="PanelContainer" parent="VBC"]
layout_mode = 2

[node name="Background" type="Panel" parent="VBC/ActionsContainer"]
layout_mode = 2

[node name="HeaderContainer" type="HBoxContainer" parent="VBC/ActionsContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Search" type="LineEdit" parent="VBC/ActionsContainer/HeaderContainer" groups=["search_prompt"]]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Rechercher une recette"

[node name="FilterButton" type="Button" parent="VBC/ActionsContainer/HeaderContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Filtres"
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_lf5oy")
theme_override_styles/hover = SubResource("StyleBoxTexture_x5bcs")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2wctw")
theme_override_styles/disabled = SubResource("StyleBoxTexture_ypvh6")
toggle_mode = true
icon = ExtResource("14_u6fwg")
icon_alignment = 1

[node name="ScriptingButton" type="Button" parent="VBC/ActionsContainer/HeaderContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Scripts"
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_lf5oy")
theme_override_styles/hover = SubResource("StyleBoxTexture_x5bcs")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2wctw")
theme_override_styles/disabled = SubResource("StyleBoxTexture_ypvh6")
toggle_mode = true
icon = ExtResource("16_60i36")
icon_alignment = 1

[node name="TabContainer" type="TabContainer" parent="VBC" node_paths=PackedStringArray("tab_bar")]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_j634f")
tabs_visible = false
script = ExtResource("15_eh2m5")
tab_bar = NodePath("../TabBarContainer/JobTabBar")

[node name="ToutPanel" parent="VBC/TabContainer" instance=ExtResource("16_pogut")]
layout_mode = 2

[node name="TailleurPanel" parent="VBC/TabContainer" instance=ExtResource("16_pogut")]
visible = false
layout_mode = 2

[node name="CordonnierPanel" parent="VBC/TabContainer" instance=ExtResource("16_pogut")]
visible = false
layout_mode = 2

[node name="BijoutierPanel" parent="VBC/TabContainer" instance=ExtResource("16_pogut")]
visible = false
layout_mode = 2

[node name="ForgeronPanel" parent="VBC/TabContainer" instance=ExtResource("16_pogut")]
visible = false
layout_mode = 2

[node name="SculpteurPanel" parent="VBC/TabContainer" instance=ExtResource("16_pogut")]
visible = false
layout_mode = 2

[node name="FaconneurPanel" parent="VBC/TabContainer" instance=ExtResource("16_pogut")]
visible = false
layout_mode = 2

[node name="BricoleurPanel" parent="VBC/TabContainer" instance=ExtResource("16_pogut")]
visible = false
layout_mode = 2

[node name="FilterContainer" type="ScrollContainer" parent="VBC"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="RecipeFilters" parent="VBC/FilterContainer" instance=ExtResource("18_4riuv")]
layout_mode = 2

[node name="ScriptingPanel" type="ScrollContainer" parent="VBC"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBC/ScriptingPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="OrderableList" type="VBoxContainer" parent="VBC/ScriptingPanel/MarginContainer" node_paths=PackedStringArray("layer_up")]
layout_mode = 2
script = ExtResource("20_bmbl0")
layer_up = NodePath("../LayerUpForListElement")

[node name="LayerUpForListElement" type="CanvasLayer" parent="VBC/ScriptingPanel/MarginContainer"]

[connection signal="active_tab_rearranged" from="VBC/TabBarContainer/JobTabBar" to="VBC/TabContainer" method="_on_tab_bar_active_tab_rearranged"]
[connection signal="toggled" from="VBC/ActionsContainer/HeaderContainer/FilterButton" to="." method="_on_filter_button_toggled"]
[connection signal="toggled" from="VBC/ActionsContainer/HeaderContainer/ScriptingButton" to="." method="_on_scripting_button_toggled"]
